--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   <a href="register.html">
-    Register
+    <button type="button" class="btn btn-primary">Register</button>
   </a>
-  <a href="login.html">Login</a>
+  <a href="login.html"><button type="button" class="btn btn-primary">login</button></a>
+
+
+  
 </body>
 </html>
