--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 </head>
 <body>
-  <a href="register.html">
-    <button type="button" class="btn btn-primary">Register</button>
-  </a>
+  
+    <button type="button" class="btn btn-primary"><a href="register.html">Register</a></button>
+  
   <a href="login.html"><button type="button" class="btn btn-primary">login</button></a>
 
 
