--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <br/>
 
   <center>
-    <a href="login.html"><button type="button" class="btn btn-primary">Register</button></a> 
+    <a href="register.html"><button type="button" class="btn btn-primary">Register</button></a>
   
   <a href="login.html"><button type="button" class="btn btn-primary">login</button></a>
 
