--- a/register.html
+++ b/register.html
@@ -1,80 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script type="text/javascript" src="./js/register.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/register.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="text-center">Register</h1>
+          <div id="register_output" class="text-primary"></div>
 
+          <form action="" method="post" autocomplete="off" id="myForm">
+            <div class="input-group">
+              <label for="name">Name:<span class="text-danger">*</span></label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                required
+                placeholder="name"
+                class="form-control"
+              />
+            </div>
+            <br />
 
+            <div class="input-group">
+              <label for="email"
+                >Email:<span class="text-danger">*</span></label
+              >
+              <input
+                type="email"
+                name="email"
+                required
+                id="email"
+                placeholder="email"
+                class="form-control"
+              />
+            </div>
 
+            <br />
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="text-center">Register</h1>
-<div id="register_output" class="text-primary"></div>
+            <div class="input-group">
+              <label for="email">DOB:<span class="text-danger">*</span></label>
+              <input
+                type="date"
+                name="dob"
+                required
+                id="dob"
+                placeholder="dob"
+                class="form-control"
+              />
+            </div>
 
+            <br />
+            <div class="input-group">
+              <label for="address"
+                >Address:<span class="text-danger">*</span></label
+              >
+              <textarea
+                id="address"
+                name="address"
+                required
+                rows="4"
+                cols="50"
+                placeholder="address"
+                class="form-control"
+              ></textarea>
+            </div>
+            <br />
+            <div class="input-group">
+              <label for="password"
+                >Password:<span class="text-danger">*</span></label
+              >
 
-   <form action="" method="post"  autocomplete="off" id="myForm">
+              <input
+                type="password"
+                name="password"
+                minlength="8"
+                required
+                id="password"
+                placeholder="password"
+                class="form-control"
+              />
+            </div>
+            <br />
+            <div class="input-group">
+              <label for="password"
+                >Confirm Password:<span class="text-danger">*</span></label
+              >
 
-    <div class="input-group">
-        <label for="name">Name:<span class="text-danger">*</span></label>
-        <input type="text" name="name" id="name" required placeholder="name" class="form-control">
-     </div>
-<br/>
-  
-<div class="input-group">
-  <label for="email">Email:<span class="text-danger">*</span></label>
-  <input type="email" name="email" required id="email" placeholder="email" class="form-control">
-</div>
+              <input
+                type="password"
+                name="confirm_password"
+                minlength="8"
+                required
+                id="confirm_password"
+                placeholder="confirm password"
+                class="form-control"
+              />
+            </div>
 
-<br/>
+            <br />
 
-<div class="input-group">
-  <label for="email">DOB:<span class="text-danger">*</span></label>
-  <input type="date" name="dob" required id="dob" placeholder="dob" class="form-control">
-</div>
+            <button
+              type="submit"
+              class="btn btn-success"
+              name="button"
+              id="submit"
+            >
+              Submit
+            </button>
 
-<br/>
-<div class="input-group">
-<label for="address">Address:<span class="text-danger">*</span></label>
-<textarea id="address" name="address" required rows="4" cols="50" placeholder="address" class="form-control">
-</textarea>
-</div>
-<br/>
-<div class="input-group">
-  <label for="password">Password:<span class="text-danger">*</span></label>
-  
-  <input type="password" name="password" minlength="8" required id="password" placeholder="password" class="form-control">
-</div>
-<br/>
-<div class="input-group">
-  <label for="password">Confirm Password:<span class="text-danger">*</span></label>
-  
-  <input type="password" name="confirm_password" minlength="8" required id="confirm_password" placeholder="confirm password" class="form-control">
-</div>
-
-<br/>
-
-<button type="submit" class="btn btn-success" name="button"  id="submit">Submit</button>
-
-<br><br>
-  Already have an Account? <a href="login.html">Sign In</a>
-
-</form> 
-
+            <br /><br />
+            Already have an Account? <a href="login.html">Sign In</a>
+          </form>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-
-
-</body>
+  </body>
 </html>
