--- a/login.html
+++ b/login.html
@@ -1,63 +1,77 @@
-
-  
-  
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./js/login.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/login.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <style></style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <br />
+          <h1 class="text-center">Login</h1>
+          <div id="register_output" class="text-primary"></div>
 
+          <form action="" method="post" autocomplete="off" id="myForm">
+            <br />
 
-</style>
+            <div class="input-group">
+              <label for="email"
+                >Email:<span class="text-danger">*</span></label
+              >
+              <input
+                type="email"
+                name="email"
+                required
+                id="email"
+                placeholder="email"
+                class="form-control"
+              />
+            </div>
 
-</head>
-<body>
-  
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12"><br/>
-        <h1 class="text-center">Login</h1>
-  <div id="register_output" class="text-primary"></div>
-  
-  
-     <form action="" method="post"  autocomplete="off" id="myForm">
-    <br/>
-      
-  <div class="input-group">
-    <label for="email">Email:<span class="text-danger">*</span></label>
-    <input type="email" name="email" required id="email" placeholder="email" class="form-control">
-  </div>
-  
-  <br/>
-  <div class="input-group">
-    <label for="password">Password:<span class="text-danger">*</span></label>
-    
-    <input type="password" name="password" minlength="8" id="password" required placeholder="password" class="form-control">
-  </div>
-  <br/>
-  
-  
-  <button type="submit" class="btn btn-success" name="button"  id="submit">Submit</button>
-<br><br>
-  Do not have an Account? <a href="register.html">Sign Up</a>
-  
-  </form> 
-  
+            <br />
+            <div class="input-group">
+              <label for="password"
+                >Password:<span class="text-danger">*</span></label
+              >
+
+              <input
+                type="password"
+                name="password"
+                minlength="8"
+                id="password"
+                required
+                placeholder="password"
+                class="form-control"
+              />
+            </div>
+            <br />
+
+            <button
+              type="submit"
+              class="btn btn-success"
+              name="button"
+              id="submit"
+            >
+              Submit
+            </button>
+            <br /><br />
+            Do not have an Account? <a href="register.html">Sign Up</a>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-
-
-
-
-</body>
-</html> 
+  </body>
+</html>
